--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,37 +1,130 @@
+
+
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply from: '../config-android.gradle'
+apply plugin: 'com.google.firebase.crashlytics'
+
+def getVersionCodeTimestamp() {
+    def date = new Date()
+    def formattedDate = date.format('yyMMddHHmm')
+    def code = formattedDate.toBigInteger()
+    println sprintf("VersionCode: %d", code)
+    return code
+}
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
-
     defaultConfig {
         applicationId "com.hb.map.navigation"
-        minSdkVersion 18
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode getVersionCodeTimestamp()
+        versionName "1.0.1"
+    }
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
+
+    viewBinding {
+        enabled = true
+    }
+
+    signingConfigs {
+        debug {
+            storeFile file("../publish/debug.keystore")
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+        release {
+            storeFile file("../publish/release.keystore")
+            storePassword KEYSTORE_PASSWORD
+            keyAlias 'vietbando'
+            keyPassword KEY_PASSWORD
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            signingConfig signingConfigs.release
+        }
+
+        applicationVariants.all { variant ->
+            variant.outputs.all { output ->
+                def date = new Date()
+                def formattedDate = date.format('yyyyMMdd_HHmm')
+                outputFileName = outputFileName.replace(".apk", "-${formattedDate}.apk")
+            }
         }
     }
 
+    flavorDimensions "mode"
+
+//    productFlavors {
+//        incident {
+//            applicationId "com.vbd.dc.t4ch"
+////            resValue "string", "app_name", "vCloudcam"
+////            manifestPlaceholders = [icon_app: "@drawable/ic_logo_vcloud_cam"]
+//        }
+//    }
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.mapbox.mapboxsdk') {
+            if (requested.name.contains('annotation')) {
+                details.useTarget('com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.8.0')
+            }
+        }
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    libLocal()
+    kotlin()
+    support()
+    multidex()
+    debugging()
+
+    //
+    gms()
+    firebase()
+    //
+    architectureComponents()
+    room()
+
+    //
+    koin()
+    networking()
+    rx()
+    //
+    mapbox()
+
+    // UI
+    ui()
+    implementation "com.tapadoo.android:alerter:3.0.1"
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //
+    implementation 'com.vincentbrison.openlibraries.android:dualcache:3.1.1'
+
+    //
+    testing()
+
+
 }
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
