--- a/dependencies-versions.gradle
+++ b/dependencies-versions.gradle
@@ -7,9 +7,9 @@ ext.versions = [
         'kotlin'              : '1.3.61',
         'gms'                 : '4.2.0',
         'fabric'              : '1.31.0',
-        'buildTools'          : '28.0.3',
+        'buildTools'          : '29.0.3',
         'minSdk'              : 18,
-        'targetSdk'           : 28,
+        'targetSdk'           : 29,
 
         /***
          * MAIN
@@ -19,13 +19,10 @@ ext.versions = [
         'architecture'        : '2.1.0',
         'constraint_layout'   : '1.1.3',
         'design'              : '1.1.0',
+        'room'                : '2.2.5',
 
         // gms
         'gms_location'        : '17.0.0',
-
-        // Clean Architecture
-        'mvp'                 : '2.0.1',
-        'mvp_state'           : '2.0.1',
 
         // Logger
         'timber'              : '4.5.1',
@@ -59,6 +56,8 @@ ext.versions = [
         // UI
         'shape_of_view'       : '1.3.2',
         'recycler_helper'     : '3.0.1',
+        'glide'               : '4.11.0',
+        'alerter'             : '3.0.1',
 
         /**
          * TESTING
