--- a/map_navigation/src/main/AndroidManifest.xml
+++ b/map_navigation/src/main/AndroidManifest.xml
@@ -1,2 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hb.map.navigation" />
+    package="com.hb.map.navigation" >
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
+    <application>
+        <service android:name=".v1.navigation.NavigationService"/>
+    </application>
+</manifest>
