--- a/map_navigation_ui/src/main/AndroidManifest.xml
+++ b/map_navigation_ui/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hb.map.navigation.ui.v1" />
+    package="com.hb.map.navigation.ui.v1" >
+
+    <application>
+        <activity android:name=".MapboxNavigationActivity"/>
+    </application>
+</manifest>
