--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         apply from: 'dependencies-all.gradle'
 
 
-        classpath deps.build.gradle
+        classpath "com.android.tools.build:gradle:3.6.3"
         classpath deps.build.kotlin
         classpath deps.build.gms
         classpath deps.build.fb_crashlytics
