--- a/map_navigation/build.gradle
+++ b/map_navigation/build.gradle
@@ -3,17 +3,7 @@ apply from: '../config-android.gradle'
 
 android {
     defaultConfig {
-        buildConfigField('String',
-                "MAPBOX_NAVIGATION_SDK_IDENTIFIER", String.format("\"%s\"", "mapbox-navigation-android")
-        )
-        buildConfigField('String',
-                "MAPBOX_NAVIGATION_VERSION_NAME", String.format("\"%s\"", project.VERSION_NAME)
-        )
-        buildConfigField "String",
-                "MAPBOX_NAVIGATION_EVENTS_USER_AGENT", String.format("\"mapbox-navigation-android/%s\"",
-                project.VERSION_NAME
-        )
-        consumerProguardFiles 'proguard-consumer.pro'
+        consumerProguardFiles 'consumer-rules.pro'
     }
 }
 
