--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,20 @@ allprojects {
         mavenCentral()
         maven { url "https://jitpack.io" }
         maven { url "https://raw.github.com/laenger/maven-releases/master/releases" }
-        maven { url 'https://mapbox.bintray.com/mapbox' }
+//        maven { url 'https://mapbox.bintray.com/mapbox' }
+        maven {
+            url "https://api.mapbox.com/downloads/v2/releases/maven"
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                // Do not change the username below.
+                // This should always be `mapbox` (not your username).
+                username = "mapbox"
+                // Use the secret token you stored in gradle.properties as the password
+                password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: ""
+            }
+        }
     }
 
     dependencies { apply from: "$rootProject.rootDir/dependencies-groups.gradle" }
